--- a/variables.env
+++ b/variables.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
-DATABASE=mongodb://dang:dang@ds042417.mlab.com:42417/dang-that
+DATABASE=mongodb://localhost:27017/dang-that
 MAIL_USER=123
 MAIL_PASS=123
 MAIL_HOST=mailtrap.io
